tests/reference/asr-interface_01-3aedbb0.stderr
semantic error: Argument(s) or return type mismatch in interface and implementation
  --> tests/errors/interface_01.f90:13:3 - 17:14
   |
13 |      module function e(x)
   |      ^^^^^^^^^^^^^^^^^^^^...
...
   |
17 |      end function
   | ...^^^^^^^^^^^^^^ 
